--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -31,9 +31,15 @@
   var s = Request["s"];
   var a = Request["a"];
   var tracking_id = (string)Model.Style["tracking_id"].Value;
-  dynamic queueid = Model.Style["queueid_apt"].Value;
   dynamic catids = Model.Style["catid_apt"].Value;
-
+  const int count = 4;
+  var planName = new string[count];
+  var queueid = new CommonGuidId[count];
+  for (int i = 0; i < count; i++)
+  {
+      planName[i] = (string)Model.Style["plan_name" + (i+1)].FieldInstance.Value;
+      queueid[i] = (CommonGuidId)Model.Style["queueid" + (i+1)].FieldInstance.Value;
+  }
   <div id="stages">
   @switch (s)
   {
@@ -67,27 +73,37 @@
         }
         else
         {
-          using (var voc = SessionInstancesModule.GetInstance().UseSharedInstance<IVocatisData>())
+          string plan = entry.plan as string;
+          var index = Array.IndexOf(planName, plan);
+          <!-- index: @index (@plan) -->
+          if (index >= 0)
           {
-            var ticket = voc.Instance.NewNumber(queueid, catids);
-            ticket.Name = entry.name;
-            ticket.Description = entry.time;
-            voc.Instance.UpdateNumber(ticket);
-
-            <img src="registration.png" id="registration" alt="registration" />
-            <h3>Sie sind angemeldet</h3>
-            <p>Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.</p>
-            <div class="left">
-              <p>Ticket drucken</p>
-              <a class="print-button" href='@Href("PrinterTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
-            </div>
-            if (showQrCode)
+            using (var voc = SessionInstancesModule.GetInstance().UseSharedInstance<IVocatisData>())
             {
-              <div class="right">
-                <p>Ticket scannen</p>
-                <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+              var ticket = voc.Instance.NewNumber(queueid[index], catids);
+              ticket.Name = entry.name;
+              ticket.Description = entry.time;
+              voc.Instance.UpdateNumber(ticket);
+
+              <img src="registration.png" id="registration" alt="registration" />
+              <h3>Sie sind angemeldet</h3>
+              <p>Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.</p>
+              <div class="left">
+                <p>Ticket drucken</p>
+                <a class="print-button" href='@Href("PrinterTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
               </div>
+              if (showQrCode)
+              {
+                <div class="right">
+                  <p>Ticket scannen</p>
+                  <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+                </div>
+              }
             }
+          }
+          else
+          {
+            <h3>Dieses Gerät ist nicht für Ihren Termin konfiguriert, bitte wenden Sie sich an die korrekte Stelle.</h3>
           }
         }
       }
