--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -114,18 +114,17 @@ body.printer {
     #stages {
         background-color: $color-secondary-background;
         height: 60vh;
-        padding: 6vh 2vw;
 
         img {
             width: 30%;
-            padding: 12vh 0 0 35vw;
+            padding: 12vh 0 0vh 35vw;
         }
         p {
             color: $color-secondary-foreground;
-            font-size: 2.5rem;
+            font-size: 2rem;
             line-height: 1.4em;
             padding: 4vh 0 0 15vw;
-            line-height: 1.4em;
+            line-height: 1.2em;
             font-weight: normal;
             width: 80%;
         }
@@ -170,18 +169,19 @@ body.printer {
 
         .left {
             float: left;
+            background-color: $color-secondary-background;
             width: 45%;
-            margin: 0vh 0 0 0vw;
+            margin: 2vh 0 0 0vw;
             p {
-                margin-top: 2vh;
-                font-size: 1.8em;
+               
+                font-size: 1em;
                 font-weight: 600;
                 padding: 0vh 0 0 15vw;
             }
             a.print-button {
                 background-color: $color-secondary-foreground;
                 position: absolute;
-                margin-top: 2vh;
+               
                 left: 17vw;
                 width: 20vw;
                 height: 11vh;
@@ -195,21 +195,20 @@ body.printer {
         .right {
             float: right;
             width: 40%;
-            margin: 0vh 5vw 0 0vw;
+            background-color: $color-secondary-background;
+            margin: 2vh 5vw 0 0vw;
             p {
-                margin-top: 2vh;
-                font-size: 1.8em;
+                font-size: 1em;
                 font-weight: 600;
-                padding: 0vh 0 2vh 7vw;
+                padding: 0vh 0 0vh 7vw;
             }
             .qrcode {
-
                 top: 45vh;
                 left: 68vw;
                 margin-left: 8vw;
                 canvas {
-                    top: 55vh;
-                    left: 60vw;
+                    width: 60%;
+
                 }
             }
         }
