Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>
Layout Print & Scan Layout

--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -22,7 +22,7 @@
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
     <p>Bitte entnehmen Sie Ihre Wartenummer</p>
-    <img src="PfeilUnten.png" />
+    <img src="PfeilRechts.png" />
   </section>
 
   @* take popup is shown, when the printout is ready *@
@@ -32,7 +32,7 @@
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
     <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
-    <img src="PfeilUnten.png" />
+    <img src="PfeilRechts.png" />
   </section>
 
   @* show popup shows the number on the screen *@
