--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -125,7 +125,7 @@
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
       <p>Bitte entnehmen Sie Ihre Wartenummer</p>
-      <img src="PfeilUnten.png" />
+      <img src="PfeilRechts.png" />
     </section>
 
     @* take popup is shown, when the printout is ready *@
@@ -135,7 +135,7 @@
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
       <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
-      <img src="PfeilUnten.png" />
+      <img src="PfeilRechts.png" />
     </section>
 
     @* show popup shows the number on the screen *@
