--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -21,7 +21,7 @@
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
-    <p>Bitte entnehmen Sie Ihre Wartenummer</p>
+    <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
     <img src="PfeilRechts.png" />
   </section>
 
