--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -124,7 +124,7 @@
       <div>
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
+      <p>Bitte entnehmen Sie Ihre Wartenummer</p>
       <img src="PfeilRechts.png" />
     </section>
 
@@ -134,7 +134,7 @@
       <div>
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
+      <p>Bitte entnehmen Sie Ihre Wartenummer</p>
       <img src="PfeilRechts.png" />
     </section>
 
