--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -240,21 +240,24 @@ body.printer {
 
         img {
             width: 13%;
-            padding: 0vh 5vw 0 28vw;
+            padding: 1vh 5vw 0 28vw;
         }
         h4 {
             font-size: 2em;
+            width: 70%;
             padding: 16vh 0 1vh 0;
             color: $color-secondary-foreground;
             display: inline-block;
             text-align: center;
         }
         p {
-            font-size: 2em;
+            font-size: 1.8em;
             font-weight: 600;
             width: 70%;
-            padding: 15vh 0 1vh 0;
+            margin: 0;
+            padding: 19vh 0 1vh 0;
             color: $color-primary-background;
+            display: inline-block;
             text-align: center;
         }
     }
