QR Code ausgeblendet &  css: btn. 70% Breite
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -7,7 +7,7 @@
 @using Stolltec.Vocatis.Model
 @{
   var disableOpenClose = false;
-  var showQrCode = true;
+  var showQrCode = false;
 
   // Parse model
   var Model = new FormsModel(this);
