Korrektur Buttons  „queue-status" &“openclose“  Breite auf 30%
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/P0_EntrySelect.cshtml
+++ b/5.0/printer/P0_EntrySelect.cshtml
@@ -14,7 +14,7 @@ Printer main entry page
   Layout = "PL_Layout.cshtml";
 }
 <div class="site-content">
-  <h2>HERZLICH WILLKOMMEN!</h2>
+  <h2>GEMEINDE EICHWALDE</h2>
   <h3>Haben Sie einen Termin vereinbart?</h3>
   <textarea id="scan"></textarea>
 </div>
