--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -59,7 +59,7 @@
       if (m.Count != 1)
       {
         <!-- code: @a -->
-        <h2>Ungültiger QR-Code! Ist Ihr Termin heute?</h2>
+        <h2>Ungültiger QR-Code!</h2>
         <p>Bitte scannen Sie den QR-Code aus ihrer aktuellen Terminbestätigung ein.</p>
       }
       else
