--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Optimization
 @using Stolltec.Forms.Model
 @{
-  var withQrCode = true;
+  var withQrCode = false;
   var Model = new FormsModel(this);
 
   var id = Model.Style["id"].Value;
