--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -203,6 +203,7 @@ body.printer {
                 padding: 0vh 0 0vh 7vw;
             }
             .qrcode {
+                display:none;
                 top: 45vh;
                 left: 68vw;
                 margin-left: 8vw;
