Textänderung auf P1 "...drucken Sie Ihr Ticket..." ohne scannen
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -89,7 +89,7 @@
 
               <img src="registration.png" id="registration" alt="registration" />
               <h3>Sie sind angemeldet</h3>
-              <p>Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.</p>
+              <p>Bitte noch etwas Geduld, drucken Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.</p>
               <div class="left">
                 <p>Ticket drucken</p>
                 <a class="print-button" href='@Href("PrinterTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
