Use local forms.js with keydown support

--- a/5.0/printer/PL_Layout.cshtml
+++ b/5.0/printer/PL_Layout.cshtml
@@ -16,7 +16,7 @@
   <link href="@Href("style.css")" type="text/css" rel="stylesheet" />
 </head>
 <body class="printer">
-  @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js", "js/hammer.min.js", "js/jquery.qrcode.js")
+  @Scripts.Render("~/Scripts/jquery", "~/Scripts/vocatis.js", "js/forms.min.js", "js/hammer.min.js", "js/jquery.qrcode.js")
 
   <header>
     <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
