--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -37,7 +37,7 @@
       <h4>Bitte wählen Sie den gewünschten Fachbereich aus:</h4>
     }
   }
-  <ul class="buttons-@buttonCount">
+  <ul class="buttons-@buttonCount @if (showQrCode) { <text>with-qr-code</text> }">
     @for (int i = 1; i <= 8; i++) {
       if (!String.IsNullOrEmpty((string)Model.Style["text" + i].Value)) {
         var queueid = Model.Style["queueid" + i].Value;
