--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -352,7 +352,7 @@ body.printer {
                 }
             }
             .btn.closed>div {
-                width: 20%;
+                width: 30%;
                 font-size: 0.75em;
                 background-color: $color-highlight-background;
                 color: $color-highlight-foreground;
@@ -386,7 +386,7 @@ body.printer {
                         width: 0%;
                     }
                     &:nth-child(2) {
-                        width: 50%;
+                        width: 70%;
                         text-align: center;
                         line-height: 7vh;
                         font-weight: bold;
@@ -396,7 +396,7 @@ body.printer {
                         box-shadow: 1px 3px 1px $color-secondary-shadow;
                     }
                     &.queue-status {
-                        width: 20%;
+                        width: 30%;
                         float: left;
                         font-size: 0.75em;
                         background-color: $color-primary-background;
@@ -457,6 +457,17 @@ body.printer {
                     content: "";
                     clear: both;
                     display: block;
+                }
+            }
+            .with-qr-code {
+                .btn.closed>div:last-child {
+                    width: 20%;
+                }
+                .btn>div:nth-child(2) {
+                    width: 50%;
+                }
+                .btn>div.queue-status {
+                    width: 20%;
                 }
             }
         }
