--- a/printer/P2_GetTicket.cshtml
+++ b/printer/P2_GetTicket.cshtml
@@ -40,6 +40,7 @@
  
   @* wait popup is shown, while generating a new number *@
   <section id="waitPopup" style="display:none;">
+  <p>Ziehen Sie Ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p> 
   <img src="images/wait.gif" id="wait" alt="wait"/>
   <p>Ihr Ticket wird gedruckt.</p>
 </section> 
