Test Position "Super, Ihr Ticket ist gescannt. Sie können es sich auf dem Sofa bequem machen, bis Sie dran sind."
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -170,11 +170,12 @@ body.printer {
         height: 60vh;
         h5 {
             padding: 15vh 0px 0px 10vw;
+            font-size: 3em;
         }
         img#wait {
             width: 15vw;
             height: auto;
-            margin: 20vh 0vw 0 42vw;
+            margin: 15vh 0vw 0 42vw;
         }
         p {
             font-size: 3em;
