--- a/printer/AppContent.cshtml
+++ b/printer/AppContent.cshtml
@@ -31,7 +31,7 @@ case WaitNumberState.Parked:
 </section>  
 <footer>
   <div class="Todo">
-    <p>Wir sind ruckzuck f&#252;r Sie da!</p>
+    <p>Super, Ihr Ticket ist gescannt. Sie können es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
   </div>
 </footer>
 
