--- a/printer/P2_GetTicket.cshtml
+++ b/printer/P2_GetTicket.cshtml
@@ -42,7 +42,9 @@
   <section id="waitPopup" style="display:none;">
   <h5>Ziehen Sie Ihr Ticket und machen Sie es sich auf dem Sofa bequem.</h5> 
   <img src="images/wait.gif" id="wait" alt="wait"/>
-  <p>Ihr Ticket wird gedruckt.</p>
+  <p>Super, Ihr Ticket ist gescannt. Sie
+können es sich auf dem Sofa bequem
+machen, bis Sie dran sind.</p>
 </section> 
 @* wait popup is shown, while generating a new number *@
 <section id="waitPopup" style="display:none;">
