--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,316 +1,236 @@
-
 /*
  * Main style file for app
  */
+
 @import "colors.scss";
 
-
 /* overwrite defaults */
-html, body, h2, h3, article, h4
-{
+
+html,
+body,
+h2,
+h3,
+article,
+h4 {
     margin: 0;
     padding: 0;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+
 /* global layout */
-html, body
-{
+
+html,
+body {
     background-color: $color-common-background;
     color: $color-common-foreground;
     font-family: "Frutiger VR", Verdana, "Lucida Sans Unicode", sans-serif;
-
-    @media (orientation: landscape)
-    {
+    @media (orientation: landscape) {
         font-size: 2.5vw;
     }
-    @media (orientation: portrait)
-    {
+    @media (orientation: portrait) {
         font-size: 4vw;
     }
 }
 
-header
-{
+header {
     background-color: $color-primary-foreground;
-    color:$color-primary-background;
-
-    .plattformlogo
-    {
+    color: $color-primary-background;
+    .plattformlogo {
         position: absolute;
     }
-
-
-    h1
-    {
+    h1 {
         position: absolute;
         font-size: 1em;
         font-weight: normal;
     }
-
-    
-
-    @media (orientation: landscape)
-    {
+    @media (orientation: landscape) {
         height: 12vh;
         width: 100%;
-        
-        .plattformlogo
-        { 
+        .plattformlogo {
             width: auto;
             height: 5vh;
             margin: 4vh 0 0 10vw;
         }
-
-        h1
-        {
+        h1 {
             position: absolute;
             font-size: 0.65 em;
             margin: 4vh 0 0 30vw;
             max-width: 70%;
         }
-
-        h2
-        {
+        h2 {
             padding: 1vh 0 1vh 10vw;
             font-size: 1em;
-            color:$color-primary-foreground;
+            color: $color-primary-foreground;
         }
     }
-
-    @media (orientation: portrait)
-    {
+    @media (orientation: portrait) {
         height: 13vh;
-
-        .plattformlogo
-        { 
+        .plattformlogo {
             width: 22%;
             margin: 8vh 0 0 5vw;
         }
-
-        h1
-        {
+        h1 {
             margin: 8vh 0vw 0 30vw;
         }
-        
     }
 }
 
-section.content
-{
+section.content {
     position: relative;
     max-height: 70vh;
-    background-color:$color-primary-background;
-    
-    @media (orientation: landscape)
-    {
-        max-height: 50vh; 
+    background-color: $color-primary-background;
+    @media (orientation: landscape) {
+        max-height: 50vh;
     }
-   
-    article
-    {
-        color:$color-primary-foreground;
+    article {
+        color: $color-primary-foreground;
         padding: 8vh 0 3vh 10vw;
         font-size: 1em;
         font-weight: bold;
         width: 80%;
-
-        @media (orientation: landscape)
-        {
-            font-size: 1.2em; 
+        @media (orientation: landscape) {
+            font-size: 1.2em;
         }
-
-        p
-        {
+        p {
             font-size: 1em;
             font-weight: bold;
-            color:$color-primary-foreground;
+            color: $color-primary-foreground;
             padding: 0;
             margin: 0;
-
-            @media (orientation: landscape)
-            {
-                font-size: 0.75em;  
+            @media (orientation: landscape) {
+                font-size: 0.75em;
             }
         }
-
-
         /* personenanzahl */
-        svg
-         {
+        svg {
             width: 25%;
             max-height: 19vh;
             padding: 6vh 25vw 0 33vw;
-            .cls-1{fill:$color-primary-shadowred;}
-            .cls-2{font-size:0.60em; fill:$color-primary-foreground;}
-
-            @media (orientation: landscape)
-            {
-                .cls-2{font-size:0.40em; fill:$color-primary-foreground;}
+            .cls-1 {
+                fill: $color-primary-shadowred;
             }
-         }
-
-        #three
-        {
+            .cls-2 {
+                font-size: 0.60em;
+                fill: $color-primary-foreground;
+            }
+            @media (orientation: landscape) {
+                .cls-2 {
+                    font-size: 0.40em;
+                    fill: $color-primary-foreground;
+                }
+            }
+        }
+        #three {
             font-size: 0.35rem;
-            margin-top: 3vh;   
+            margin-top: 3vh;
         }
     }
-    
-
-    div.number
-    {
-        color: $color-primary-foreground; 
+    div.number {
+        color: $color-primary-foreground;
         margin: 8vh 0 0 0;
         width: 90vw;
         height: 4vh;
         display: flex;
-
-        @media (orientation: landscape)
-        {
-            height: 7vh; 
-            margin: 0; 
+        @media (orientation: landscape) {
+            height: 7vh;
+            margin: 0;
         }
-     
-
-        h3.flex-item1 
-
-        {  
-        background-color:$color-primary-shadowred;
-        font-size: 0.65em;
-        padding: 1vh 0 1vh 10vw;
-        width: 40vw;
-          
-            @media (orientation: landscape)
-            {
+        h3.flex-item1 {
+            background-color: $color-primary-shadowred;
+            font-size: 0.65em;
+            padding: 1vh 0 1vh 10vw;
+            width: 40vw;
+            @media (orientation: landscape) {
                 font-size: 0.65em;
-                padding: 2vh 0 2vh 10vw;  
+                padding: 2vh 0 2vh 10vw;
             }
         }
-       
-        h4.flex-item2 
-        {
-            background-color:$color-primary-shadowred;
+        h4.flex-item2 {
+            background-color: $color-primary-shadowred;
             font-size: 0.75em;
-            margin:0;
+            margin: 0;
             padding: 1vh 0 1vh 0;
             width: 10vw;
             text-align: center;
-
-            @media (orientation: landscape)
-            {
-                font-size: 0.75em; 
-                padding: 2vh 0 2vh 10vw;  
+            @media (orientation: landscape) {
+                font-size: 0.75em;
+                padding: 2vh 0 2vh 10vw;
             }
         }
-        
-
-        p.flex-item3 
-        {
-            margin:0;
+        p.flex-item3 {
+            margin: 0;
             font-size: 0.65em;
             padding: 1vh 0vw 1vh 5vw;
-            color:$color-primary-foreground;
-
-            @media (orientation: landscape)
-            {
-                font-size: 0.65em; 
-                padding: 2vh 0 2vh 10vw; 
+            color: $color-primary-foreground;
+            @media (orientation: landscape) {
+                font-size: 0.65em;
+                padding: 2vh 0 2vh 10vw;
             }
         }
-
-        .no 
-        {
+        .no {
             flex-wrap: nowrap;
         }
-
     }
-
-
 }
 
-section.room
-{
-    article
-    {
+section.room {
+    article {
         padding: 8vh 0 3vh 10vw;
-        
-        h1
-        {
+        h1 {
             font-size: 3em;
-            margin:0 0 1vh 0;
-
+            margin: 0 0 1vh 0;
         }
-
-        p
-        {
+        p {
             font-size: 1em;
             font-weight: bold;
-            color:$color-primary-foreground;
+            color: $color-primary-foreground;
             padding: 2vh 0 2vh 0;
             margin: 0;
-
-            @media (orientation: landscape)
-            {
-                font-size: 0.60em;  
+            @media (orientation: landscape) {
+                font-size: 0.60em;
             }
         }
-
-        #place
-        {
+        #place {
             text-transform: uppercase;
             font-size: 2em;
             font-weight: bold;
             padding: 1vh 0vw 1vh 0vw;
-
-            @media (orientation: landscape)
-            {
-                font-size: 1.3em;  
+            @media (orientation: landscape) {
+                font-size: 1.3em;
             }
         }
-    
-        #bold
-        {
+        #bold {
             font-weight: bold;
         }
     }
-      
 }
 
-.Todo
-{
-    margin:0;
+.Todo {
+    margin: 0;
     padding: 4vh 0 0 0vw;
     top: 20vh;
-
-    p
-    {
+    p {
         font-size: 1em;
         font-weight: bold;
-        color:$color-secondary-background;
-        padding: 0 0 0 10vw;
-        width: 80%;
+        color: $color-secondary-background;
+        padding: 0 10vw 0 10vw;
         margin: 0;
-
-        @media (orientation: landscape)
-        {
-            font-size: 1.2em;  
+        @media (orientation: landscape) {
+            font-size: 1.2em;
         }
-    } 
-
-    @media (orientation: landscape)
-    {
-        font-size: 0.65em;  
+    }
+    @media (orientation: landscape) {
+        font-size: 0.65em;
     }
 }
 
-     
+
 /* fehlermeldung */
-#error
-{
+
+#error {
     background-color: $color-highlight-background;
     width: 100%;
-    margin:0;
-
+    margin: 0;
 }
