--- a/5.0/printer/AppTicket.cshtml
+++ b/5.0/printer/AppTicket.cshtml
@@ -11,5 +11,5 @@
   dynamic queueid = CommonGuidId.FromString(Request["q"]);
   dynamic catids = GuidIdsFieldInstance.ParseValue("",Request["c"]).Value;
   var ticket = Vocatis.CreateTicket(queueid, catids);
-  Response.Redirect(Href("App.cshtml", new {id=ticket.Id, tracking_id}));
+  Response.Redirect(Href("App.cshtml", new {i=ticket.Id, t=tracking_id}));
 }
