--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -112,7 +112,7 @@
               {
                 <div class="right">
                   <p>Ticket scannen</p>
-                  <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+                  <div class="qrcode" data-url="@Href("App.cshtml", new {i=ticket.Id, t=tracking_id})"></div>
                 </div>
               }
             }
