--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -38,7 +38,7 @@
   <section class="qrcode">
     @if (withQrCode) {
     <h4>Aufruf verfolgen</h4>
-    <a href="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></a>
+    <a href="@Href("App.cshtml", new {i=ticket.Id, t=tracking_id})"></a>
     }
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
