--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -66,7 +66,7 @@
       {
         if (m.Count != 1 && debug)
         {
-          entry = new { plan="debug", name="debug name", time="debug time"};
+          entry = new { id=a, plan="debug", name="debug name", time="debug time"};
         }
         else
         {
@@ -89,11 +89,15 @@
           {
             using (var voc = SessionInstancesModule.GetInstance().UseSharedInstance<IVocatisData>())
             {
-              var ticket = voc.Instance.NewNumber(queueid[index], catids);
-              ticket.Name = entry.name;
-              ticket.Description = entry.time;
-              voc.Instance.UpdateNumber(ticket);
-
+              var ticket = voc.Instance.FindNumber(entry.id);
+              if (ticket == null)
+              {
+                ticket = voc.Instance.NewNumber(queueid[index], catids);
+                ticket.Name = entry.name;
+                ticket.Description = entry.time;
+                ticket.ReferenceId = entry.id;
+                voc.Instance.UpdateNumber(ticket);
+              }
               <img src="registration.png" id="registration" alt="registration" />
               <h3>Sie sind angemeldet</h3>
               if (showQrCode)
