Fix code block error.

--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -89,7 +89,7 @@
 
               <img src="registration.png" id="registration" alt="registration" />
               <h3>Sie sind angemeldet</h3>
-              @if (showQrCode)
+              if (showQrCode)
               {
                 <p>Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.</p>
               }
