--- a/printer/AppContent.cshtml
+++ b/printer/AppContent.cshtml
@@ -31,7 +31,7 @@ case WaitNumberState.Parked:
 </section>  
 <footer>
   <div class="Todo">
-    
+    <p>Super, Ihr Ticket ist gescannt. Sie können es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
   </div>
 </footer>
 
@@ -40,7 +40,7 @@ case WaitNumberState.Parked:
 
 <section class="wait01 content">
   <article>
-    <p>Es sind noch @status.Position Kunden vor Ihnen.</p>
+    <p>Wir sind ruckzuck f&#252;r Sie da!</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
           <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
           <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
@@ -58,7 +58,8 @@ case WaitNumberState.Parked:
 </section>
 <footer>
   <div class="Todo">
-    <p>Super, Ihr Ticket ist gescannt. Sie können es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
+    <p>Wir sind ruckzuck f&#252;r Sie da!</p>
+    <p>Super, Ihr Ticket ist gescannt. Sie k&ouml;nnen es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
   </div>
 </footer>
   }
