--- a/5.0/display/List3.cshtml
+++ b/5.0/display/List3.cshtml
@@ -75,14 +75,18 @@ else
 
         @{
             var notify = Model.Style["notify"].FieldInstance.Value as string;
+            if (notify.Contains("~speechurl~"))
+            {
+                string speechurl = Stolltec.Forms.Speech.SpeechHandler.Register();
+                notify = notify.Replace("~speechurl~", speechurl);
+            }
             var popup = Model.Style["popup"].FieldInstance.Value as string;
         }
         @if (!String.IsNullOrEmpty(notify))
         {
-            <audio id="notify">
-                <source src="@Href(notify)" type="audio/mp3" />
+            <audio id="notify" data-src="@Href(notify)">
             </audio>
-        }
+         }
         @if (!String.IsNullOrEmpty(popup))
         {
             <div id="popup" style="display:none;" class="popup @popup">
@@ -102,8 +106,10 @@ else
                         items: "tr:not(.spacer)",
                         call: function (items) {
                             var audio = document.getElementById("notify");
-                            if (audio) audio.play();
-
+                            if (audio) {
+                                audio.src = $(audio).data("src").replace("~number~", items[0].number).replace("~room~", items[0].room);
+                                audio.play();
+                            }
                             if (popupContent) {
                                 $("#popup").html(popupContent.replace("~number~", items[0].number).replace("~room~", items[0].room)).show();
                                 window.setTimeout(function () { $("#popup").hide(); }, 10000);
