--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -329,6 +329,12 @@
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
+      <field key="title">
+        <names>
+          <name>Anliegen</name>
+        </names>
+        <content_class bind="Column" parentField="import" type="TextFree" />
+      </field>
       <field key="plan">
         <names>
           <name>Terminplan</name>
