Fehler Umlaute "Sie..können..." behoben
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/printer/AppContent.cshtml
+++ b/printer/AppContent.cshtml
@@ -31,7 +31,7 @@ case WaitNumberState.Parked:
 </section>  
 <footer>
   <div class="Todo">
-    <p>Super, Ihr Ticket ist gescannt. Sie können es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
+    <p>Super, Ihr Ticket ist gescannt. Sie k&ouml;nnen es sich auf dem Sofa bequem machen, bis Sie dran sind.</p>
   </div>
 </footer>
 
