templates für Styles.xml und _PageStart.cshtml

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -6,7 +6,7 @@
           file="List.cshtml"
          interactive="false" target="Forms2">
     <names>
-      <name culture="de">vocatis list</name>
+      <name culture="de">vocatis list ({{version}})</name>
     </names>
     <fields>
       <field key="source">
@@ -48,7 +48,7 @@
           file="List3.cshtml"
          interactive="false" target="Forms2">
     <names>
-      <name culture="de">vocatis list multi </name>
+      <name culture="de">vocatis list multi ({{version}})</name>
     </names>
     <fields>
       <field key="source1">
