--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -5,7 +5,7 @@
           file="ImportFromData.cshtml"
          interactive="false" target="Forms2">
     <names>
-      <name culture="de">Vocatis Terminimport </name>
+      <name culture="de">Vocatis Terminimport ({{version}})</name>
     </names>
     <fields>
       <field key="import">
