--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
 
-  <style key="vocatic_multi_2019" file="Printer.cshtml"
+  <style key="vocatic_multi_2019{{suffix}}" file="Printer.cshtml"
          interactive="true" target="Forms2" preview="preview.png">
     <names>
-      <name culture="de">vocatis printer</name>
+      <name culture="de">vocatis printer {{option_name}} ({{version}})</name>
     </names>
     <fields>
       <field key="mode">
@@ -176,10 +176,10 @@
     </fields>
   </style>
 
-  <style key="vocm19ap" file="P0_EntrySelect.cshtml"
+  <style key="vocm19ap{{suffix}}" file="P0_EntrySelect.cshtml"
          interactive="true" target="Forms2" preview="preview.png">
     <names>
-      <name culture="de">vocatis printer and appointments</name>
+      <name culture="de">vocatis printer and appointments {{option_name}} ({{version}})</name>
     </names>
     <fields>
       <field key="mode">
@@ -493,7 +493,7 @@
     file="TicketDefault.cshtml"
     interactive="false" target="Forms2">
     <names>
-      <name culture="de">Vocatis Wartemarke (Standard)</name>
+      <name culture="de">Vocatis Wartemarke (Standard) {{option_name}} ({{version}})</name>
     </names>
     <fields>
       <field key="id">
