--- a/5.0/queueinfo/Styles.xml.handlebars
+++ b/5.0/queueinfo/Styles.xml.handlebars
@@ -3,7 +3,7 @@
   <style key="vocatic_queueinfo_2019" file="QueueInfo.cshtml"
          interactive="true" target="Forms2">
     <names>
-      <name culture="de">Vocatis Warteinformation</name>
+      <name culture="de">Vocatis Warteinformation ({{version}})</name>
     </names>
     <fields>
       <field key="text1">
