Benutze Sprache "Microsoft Hedda Desktop"

--- a/5.0/display/Styles.xml.handlebars
+++ b/5.0/display/Styles.xml.handlebars
@@ -22,7 +22,7 @@
          <content_class type="TextChoose">
           <text key="">Keine</text>
           <text key="tone.mp3">Standard</text>
-          <text key="~speechurl~?text=~number~ bitte zu ~room~">Sprachausgabe</text>
+          <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
       <field key="popup">
@@ -106,7 +106,7 @@
          <content_class type="TextChoose">
           <text key="">Keine</text>
           <text key="tone.mp3">Standard</text>
-          <text key="~speechurl~?text=~number~ bitte zu ~room~">Sprachausgabe</text>
+          <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
       <field key="popup">
