--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -8,6 +8,27 @@
       <name culture="de">Vocatis Terminimport ({{version}})</name>
     </names>
     <fields>
+      <field key="im">
+        <names>
+          <name>Zeitpunkt</name>
+        </names>
+        <content_class type="TextChoose">
+          <text key="jit">Zur Terminzeit importieren</text>
+          <text key="day">Ganzen Tag importieren</text>
+        </content_class>
+      </field>
+      <field key="nm">
+        <names>
+          <name>Wartenummer</name>
+        </names>
+        <content_class type="TextChoose">
+          <text key="whole">Komplett</text>
+          <text key="last3">Letzte 3 Stellen</text>
+          <text key="last4">Letzte 4 Stellen</text>
+          <text key="Tlast3">T + Letzte 3 Stellen</text>
+          <text key="Tlast4">T + Letzte 4 Stellen</text>
+        </content_class>
+      </field>
       <field key="import">
         <names>
           <name>Termine</name>
