--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -59,6 +59,12 @@
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
+      <field key="title">
+        <names>
+          <name>Anliegen</name>
+        </names>
+        <content_class bind="Column" parentField="import" type="TextFree" />
+      </field>
       <field key="description">
         <names>
           <name>Beschreibung</name>
